<package format="3">
  <name>lane</name>
  <version>0.0.1</version>
  <description>Jeju lane detection package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드/실행에 필요한 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>my_lane_msgs</build_depend>
  <exec_depend>my_lane_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>torch</exec_depend>
  <!-- 필요한 다른 라이브러리들이 있으면 여기에 추가 -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
